# BloodPressureTracker

./: Jenkinsfile  docker-compose.yml  dockerfile
bms_app_web/: BMS.sln  dockerfile
bms_app_web/BMS/: BMS.csproj  Program.cs
bms_app_web/BMS/Controllers/: SharedFile.cs
bms_app_web/BMS/Pages/: Error.cshtml.cs  Index.cshtml  Index.cshtml.cs  Privacy.cshtml.cs
bms_app_web/BMS/Pages/Shared/: _Layout.cshtml
bms_app_web/BMS/Properties/: launchSettings.json
build_output/: BloodPressureTracker  CMakeCache.txt  Makefile  cmake_install.cmake
build_pipeline/: docker-compose.yml  dockerfile.build  dockerfile.jenkins  jenkinsfile
build_test/: BloodPressureTracker  CMakeCache.txt  Makefile  cmake_install.cmake
db/: bpm.sql  dockerfile  globaldb_init.sql  init.sql  mysql.sh
docs/: workspace.json
docs/.structurizr/index/: _12.cfe  _12.cfs  _12.si  _5.cfe  _5.cfs  _5.si  _8.cfe  _8.cfs  _8.si  segments_1  segments_13  segments_6  segments_9
platform/: docker-compose.yml  readme.md
platform/docs/: workspace.json
platform/docs/.structurizr/index/: _a.cfe  _a.cfs  _a.si  segments_b
src/: CMakeLists.txt  Makefile  Task.cpp  bloodMeasurement.cpp  build.sh  build_old.sh  build_test.sh  cmake_install.cmake  databaseController.cpp  dbController.cpp  dockerbuildRun.bat  dockerfile  main.cpp  measurementController.cpp  patientController.cpp  tcpSocket.cpp  threadPool.cpp
src/headers/: Task.h  bloodMeasurement.h  databaseController.h  dbController.cpp  dbController.h  dbModels.h  measurementController.h  patientController.h  patientService.h  tcpSocket.cpp  tcpSocket.h  threadPool.h
